--- a/.editorconfig
+++ b/.editorconfig
@@ -2,7 +2,8 @@ root = true
 
 [*]
 indent_size = 2
-indent_style = tab
+indent_style = space
 trim_trailing_whitespace = true
 charset = utf-8
 end_of_line = lf
+insert_final_newline = true
