Adding wrapper for VertexArrayObjects.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,6 +39,7 @@ add_subdirectory(external/glm)
 add_executable(l3dviewer
   src/gl/Window.hpp
   src/gl/Window.cpp
+  src/gl/VertexArray.hpp
   src/main.cpp)
 
 set_property(TARGET l3dviewer PROPERTY CXX_STANDARD 14)
