Adding wrappers for shaders.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,8 @@ add_executable(l3dviewer
   src/gl/Window.cpp
   src/gl/VertexArray.hpp
   src/gl/VertexBuffer.hpp
+  src/gl/ShaderProgram.hpp
+  src/gl/Shader.hpp
   src/main.cpp)
 
 set_property(TARGET l3dviewer PROPERTY CXX_STANDARD 14)
