--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -43,6 +43,7 @@ add_executable(l3dviewer
   src/gl/VertexBuffer.hpp
   src/gl/ShaderProgram.hpp
   src/gl/Shader.hpp
+  src/gl/Debug.hpp
   src/main.cpp)
 
 set_property(TARGET l3dviewer PROPERTY CXX_STANDARD 14)
