Adding wrapper for image loading.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,7 @@ add_executable(l3dviewer
   src/gl/ShaderProgram.hpp
   src/gl/Shader.hpp
   src/gl/Debug.hpp
+  src/gl/Image.hpp
   src/main.cpp)
 
 set_property(TARGET l3dviewer PROPERTY CXX_STANDARD 14)
